--- a/app/views/permissions/index.html.slim
+++ b/app/views/permissions/index.html.slim
@@ -2,7 +2,7 @@ h1
 	= t('permissions.index.title')
 table
   tr
-    th
+    th style="float:left"
     	= t('permissions.index.name')
 	- @permissions.each do |permission|
 	  tr
