--- a/app/views/section_enrollment/enrollments/attach_item.html.slim
+++ b/app/views/section_enrollment/enrollments/attach_item.html.slim
@@ -12,6 +12,6 @@
   = label_tag :picture, t('section_enrollment.enrollment.attachment_item.attachments')
   = hidden_field_tag :name, params[:name]
   = file_field_tag :picture
-  = submit_tag t('section_enrollment.enrollment.attachment_item.back')
+  = submit_tag t('section_enrollment.enrollment.attachment_item.add')
 
 = link_to t('section_enrollment.enrollment.attachment_item.back'), [:dashboard, :enrollments]
