--- a/app/views/vacations/index.html.slim
+++ b/app/views/vacations/index.html.slim
@@ -12,19 +12,20 @@ table#list-table
     th= Vacation.human_attribute_name("used")
     th= Vacation.human_attribute_name("remain")
     - @users.each do |user|
-      tr.selectable onclick="location.href='#{vacation_path(user)}'"
-        td=h user.name
-        - vacation = user.vacations.last
-        - if vacation
-          td= "#{vacation.from} ~ #{vacation.to}"
-          td= "#{vacation.period} 일"
-          td= "#{vacation.used.total} 일"
-          td= "#{vacation.remain} 일"
-        - else
-          td
-          td
-          td
-          td
+      - if user.hrinfo
+        tr.selectable onclick="location.href='#{vacation_path(user)}'"
+          td=h user.name
+          - vacation = user.hrinfo.vacations.last
+          - if vacation
+            td= "#{vacation.from} ~ #{vacation.to}"
+            td= "#{vacation.period} 일"
+            td= "#{vacation.used.total} 일"
+            td= "#{vacation.remain} 일"
+          - else
+            td
+            td
+            td
+            td
 
 br
 
