--- a/app/views/payrolls/index.html.slim
+++ b/app/views/payrolls/index.html.slim
@@ -11,6 +11,6 @@ h2 ...
     - payrolls.each do |payroll|
       tr.selectable onclick="location.href='#{payroll_path(payroll)}'"
         td= payroll.payday
-        td= payroll.user.hrinfo.fullname
+        td= payroll.hrinfo.fullname
 - else
   = "empty"
