--- a/app/views/payrolls/show.html.slim
+++ b/app/views/payrolls/show.html.slim
@@ -5,7 +5,7 @@
   = link_to t('common.title.edit'), edit_payroll_path(payroll)
   = " | "
   = link_to t('common.title.list'), [:payrolls]
-h2= "#{payroll.payday} : #{payroll.user.hrinfo.fullname}"
+h2= "#{payroll.payday} : #{payroll.hrinfo.fullname}"
 
 table#list-table
   tr
