--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -24,13 +24,13 @@ h2
       = f.label :revenue, Project.human_attribute_name("revenue")
       = f.text_field :revenue
   = f.submit t('common.button.update')
-= form_tag({:action => "add_user", :id => project, }, {:class => "tabular"}) do
+= form_tag({:action => "add_user", :id => project }, {:class => "tabular"}) do
   .box
     p
       = label_tag :username, User.human_attribute_name("name")
-      - for user in project.users
-        = user.name 
-        = link_to t("common.title.destroy"), :action => "del_user", :id => project, :uid => user.id
+      - for hrinfo in project.hrinfos
+        = hrinfo.fullname 
+        = link_to t("common.title.destroy"), :action => "del_user", :id => project, :uid => hrinfo.id
         br
       = text_field_tag :username
       = submit_tag t("common.button.add")
