--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -16,8 +16,8 @@ h2
       dt
         = t('projects.show.users')
       dd
-        - for user in project.users
-          = user.name
-          = link_to t('projects.show.allocation_ratio'), [:assign, user, :projects]
+        - for hrinfo in project.hrinfos
+          = hrinfo.fullname
+          = link_to t('projects.show.allocation_ratio'), [:assign, hrinfo.user, :projects]
           br
 = render 'expense'
