--- a/app/views/permissions/edit.html.slim
+++ b/app/views/permissions/edit.html.slim
@@ -8,13 +8,14 @@ h1
     = f.label :name
     br
     = f.text_field :name
-	p
-		= f.label :users
-		br
-		- if !User.all.blank?
-		  - for user in User.enabled
-				= check_box_tag "permission[user_ids][]", user.id, @permission.user.include?(user)
-				= user.name
+  p
+    = f.label :hrinfos
+    br
+    - if !User.all.blank?
+      - for user in User.enabled
+        - if user.hrinfo
+          = check_box_tag "permission[hrinfo_ids][]", user.hrinfo.id, @permission.hrinfo.include?(user.hrinfo)
+          = user.hrinfo.fullname
   p
     = f.submit 'Update'
 
