--- a/app/views/groups/_form.html.slim
+++ b/app/views/groups/_form.html.slim
@@ -10,9 +10,10 @@ h2= t("common.title.#{action_name}")
       = f.label :name
       = f.text_field :name
     p
-      = f.label :users
+      = f.label :hrinfos
       - User.enabled.each do |u|
-          = check_box_tag "group[user_ids][]", u.id, group.users.include?(u)
+        - if u.hrinfo
+          = check_box_tag "group[hrinfo_ids][]", u.hrinfo.id, group.hrinfos.include?(u.hrinfo)
           = u.fullname
           br
   p
