--- a/app/views/documents/index.html.slim
+++ b/app/views/documents/index.html.slim
@@ -37,8 +37,8 @@ table#list-table
         td
           =h document.project_name
         td
-          - if !document.hrinfos.blank?
-            - names = document.hrinfos.index_by {|hrinfo| hrinfo.fullname }
+          - if !document.employees.blank?
+            - names = document.employees.index_by {|employee| employee.fullname }
             = names.keys.sort.join(", ")
         td
           =h document.tag_list
