--- a/app/views/main/_main_menu.html.slim
+++ b/app/views/main/_main_menu.html.slim
@@ -3,7 +3,7 @@ table align="center" border="0" cellspacing="5" cellpadding="5"  style="margin-t
     th style="background-color:lightgray;"
       = t("main.index.human_resources")
     td
-      = link_to t("hrinfos.index.title"), :controller => "hrinfos"
+      = link_to t("employees.index.title"), :controller => "employees"
       '  /
       = link_to t("commutes.index.title"), commute_path(@account)
       '  /
@@ -15,15 +15,15 @@ table align="center" border="0" cellspacing="5" cellpadding="5"  style="margin-t
     th style="background-color:lightgray;"
       = t("main.index.finance")
     td
-      - if @account.hrinfo.permission.any? {|perm| perm.name == 'pettycashes'}
+      - if @account.employee.permission.any? {|perm| perm.name == 'pettycashes'}
         = link_to t("pettycashes.index.title"), :controller => "pettycashes"
         '  /
       = link_to t("cardbills.index.title"), :controller => "cardbills" 
       '  /
-      - if @account.hrinfo.permission.any? {|perm| perm.name == 'bank_accounts'} 
+      - if @account.employee.permission.any? {|perm| perm.name == 'bank_accounts'} 
         = link_to t("bank_accounts.index.title"), :bank_accounts
         '  /
-      - if @account.hrinfo.permission.any? {|perm| perm.name == 'taxbills'}
+      - if @account.employee.permission.any? {|perm| perm.name == 'taxbills'}
         = link_to t("taxbills.index.title"), :taxbills
         '  /
       = link_to t("expense_reports.index.title"), :expense_reports
@@ -35,7 +35,7 @@ table align="center" border="0" cellspacing="5" cellpadding="5"  style="margin-t
     th style="background-color:lightgray;"
       = t("main.index.project")
     td
-      - if @account.hrinfo.permission.any? {|perm| perm.name == 'projects'}
+      - if @account.employee.permission.any? {|perm| perm.name == 'projects'}
         = link_to t("projects.index.title"), :controller => "projects"
   tr
     th style="background-color:lightgray;"
@@ -43,10 +43,10 @@ table align="center" border="0" cellspacing="5" cellpadding="5"  style="margin-t
     td
       = link_to t("documents.index.title"), :controller => "documents"
       '  /
-      - if @account.hrinfo.permission.any? {|perm| perm.name == 'business_clients'}
+      - if @account.employee.permission.any? {|perm| perm.name == 'business_clients'}
         = link_to t("business_clients.index.title"), :business_clients
         '  /
-      - if @account.hrinfo.permission.any? {|perm| perm.name == 'contacts'}
+      - if @account.employee.permission.any? {|perm| perm.name == 'contacts'}
         = link_to t("contacts.index.title"), :contacts
       
   - if @account.ingroup?(:admin)
