--- a/app/views/used_vacations/show.html.slim
+++ b/app/views/used_vacations/show.html.slim
@@ -4,7 +4,7 @@
     = " | "
     = link_to t('common.title.destroy'), [vacation, used_vacation], :method => :delete, :confirm => t("common.messages.delete_confirm")
     = " | "
-  = link_to t('common.title.list'), vacation_path(vacation.hrinfo.account)
+  = link_to t('common.title.list'), vacation_path(vacation.employee.account)
 
 h2= t('.title')
 
