--- a/app/views/expense_reports/index.html.slim
+++ b/app/views/expense_reports/index.html.slim
@@ -23,7 +23,7 @@ h2 Total : #{@expenses.length}
       th= Report.human_attribute_name('status')
     - @expenses.each do |report|
       tr.selectable onclick="location.href='#{expense_report_path(report)}'"
-        td= report.hrinfo.fullname rescue ""
+        td= report.employee.fullname rescue ""
         td= t("activerecord.models.#{report.target_type.tableize.singularize}") rescue ""
         td= report.project.name rescue ""
         td= report.description
