--- a/app/views/groups/_form.html.slim
+++ b/app/views/groups/_form.html.slim
@@ -10,10 +10,10 @@ h2= t("common.title.#{action_name}")
       = f.label :name
       = f.text_field :name
     p
-      = f.label :hrinfos
+      = f.label :employees
       - Account.enabled.each do |u|
-        - if u.hrinfo
-          = check_box_tag "group[hrinfo_ids][]", u.hrinfo.id, group.hrinfos.include?(u.hrinfo)
+        - if u.employee
+          = check_box_tag "group[employee_ids][]", u.employee.id, group.employees.include?(u.employee)
           = u.fullname
           br
   p
