--- a/app/views/payments/show.html.slim
+++ b/app/views/payments/show.html.slim
@@ -5,11 +5,11 @@
     = " | "
     = link_to t('bonuses.new.link'), [:bonus, account, :payments]
     = " | "
-  = link_to t('hrinfos.show.title'), hrinfo_path(account.hrinfo)
+  = link_to t('employees.show.title'), employee_path(account.employee)
   = " | "
   = link_to t('common.title.back'), :payments
 h2
-  = account.hrinfo.fullname
+  = account.employee.fullname
 
 table#list-table
   tr
