--- a/app/views/vacations/show.html.slim
+++ b/app/views/vacations/show.html.slim
@@ -2,7 +2,7 @@
   - if @account.ingroup?("admin")
     = link_to t('vacations.new.link'), [:new, account, :vacation]
     = " | "
-  = link_to t('hrinfos.show.title'), hrinfo_path(account.hrinfo)
+  = link_to t('employees.show.title'), employee_path(account.employee)
 h2= account.fullname
 
 - unless vacations.empty?
