목록 클릭 js 밖으로 뺌

--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -9,6 +9,6 @@ h2= t('common.title.list')
 table#list-table
   tr
     th= Group.human_attribute_name("name")
-    - groups.each do |group|
-      tr.selectable onclick="location.href='#{group_path(group)}'"
-        td= group.name
+  - groups.each do |group|
+    tr.selectable.link_to*{"data-url" => group_path(group)} 
+      td= group.name
