--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -1,7 +1,7 @@
 - title t('groups.title')
 
 #show_command
-  = link_to t("common.title.new"), new_group_path
+  = link_to t("common.title.new"), [:new, :group]
   '  |
   = link_to t('common.title.back'), :root
 
