--- a/app/views/accounts/my.html.slim
+++ b/app/views/accounts/my.html.slim
@@ -3,6 +3,6 @@
 #show_command
   = link_to t("accounts.edit.title"), [:edit, @account]
   '  |
-  = link_to t("accounts.changepw.title"), :action => "changepw", :id => @account
+  = link_to t("accounts.changepw.title"), changepw_account_path(@account)
 
 = render 'detail', :account => @account
