--- a/app/views/main/_main_menu2.html.slim
+++ b/app/views/main/_main_menu2.html.slim
@@ -5,7 +5,7 @@ div class={@account.admin? ? "admin" : ""}
       ul
         li= link_to t("employees.index.title"), :controller => "employees"
         li= link_to t("vacations.index.title"), vacation_path(@account)
-        - if @account.employee.permission.any? {|perm| perm.name == 'commutes'}
+        - if @account.permission? 'commutes'
           li= link_to t("commutes.index.title"), commute_path(@account)
         - if @account.has_payment_info
           li= link_to t("payments.title"), payment_path(@account)
@@ -13,30 +13,30 @@ div class={@account.admin? ? "admin" : ""}
     .menubar_item.item2
       h2= t("main.index.finance")
       ul
-        - if @account.employee.permission.any? {|perm| perm.name == 'pettycashes'}
+        - if @account.permission? 'pettycashes'
           li= link_to t("pettycashes.index.title"), :controller => "pettycashes"
         li= link_to t("cardbills.index.title"), :controller => "cardbills"
-        - if @account.employee.permission.any? {|perm| perm.name == 'bank_accounts'}
+        - if @account.permission? 'bank_accounts'
           li= link_to t("bank_accounts.index.title"), :bank_accounts
-        - if @account.employee.permission.any? {|perm| perm.name == 'taxbills'}
+        - if @account.permission? 'taxbills'
           li= link_to t("taxbills.index.title"), :taxbills
         li= link_to t("expense_reports.index.title"), :expense_reports
-        - if @account.employee.permission.any? {|perm| perm.name == 'ledger_accounts'}
+        - if @account.permission? 'ledger_accounts'
           li= link_to t("ledger_accounts.title"), :ledger_accounts
-        - if @account.employee.permission.any? {|perm| perm.name == 'postings'}
+        - if @account.permission? 'postings'
           li= link_to t("postings.title"), :postings
 
     .menubar_item.item3
       h2= t("main.index.project")
       ul
-        - if @account.employee.permission.any? {|perm| perm.name == 'projects'}
+        - if @account.permission? 'projects'
           li= link_to t("projects.index.title"), :controller => "projects"
 
     .menubar_item.item4
       h2= t("main.index.document")
       ul
         li= link_to t("documents.index.title"), :controller => "documents"
-        - if @account.employee.permission.any? {|perm| perm.name == 'business_clients'}
+        - if @account.permission? 'business_clients'
           li= link_to t("business_clients.index.title"), :business_clients
         li= link_to t("contacts.index.title"), :contacts
 
