--- a/app/views/commutes/index.html.slim
+++ b/app/views/commutes/index.html.slim
@@ -9,17 +9,19 @@ h2= t('common.title.list')
   table#list-table
     tr
       th= Employee.human_attribute_name("fullname")
-      - commutes_everyone.values.first.keys.sort.first.to_date.step(commutes_everyone.values.first.keys.sort.last.to_date, 1.day).each do |day|
+      - sorted_keys = commutes_everyone.values.first.keys.sort
+      - sorted_keys.first.to_date.step(sorted_keys.last.to_date, 1).each do |day|
         th= l day, format: :compact_long
-    - commutes_everyone.keys.sort.each do |account_id|
-      - commutes_for_account = commutes_everyone[account_id]
-      - account = Account.find(account_id)
+    - commutes_everyone.keys.sort.each do |employee_id|
+      - commutes_for_employee = commutes_everyone[employee_id]
+
+      - employee = Employee.find(employee_id)
       tr.selectable onclick="location.href='#{commute_path(account)}'"
         td
           nobr
-            = account.fullname
-        - commutes_for_account.keys.sort.each do |day|
-          - commute = commutes_for_account[day]
+            = employee.fullname
+        - commutes_for_employee.keys.sort.each do |day|
+          - commute = commutes_for_employee[day]
           - unless commute.nil?
             td valign="top"
               = t("commutes.arrive_at_work") + " : " + (l commute.go, format: :time)
